# TrialUBBSchedule

./: .gitignore  PickleSerializer.py  README.md  UI.py  main.py  newEvent.ics  professors_dump_old.pickle  pyproject.toml  testEvent.ics
Calendar/: AbstractClassScheduler.py  AbstractEvent.py  EventCreator.py  ProfessorCalendarCreator.py  ProfessorEvent.py  ProfessorScheduler.py  ScheduleCalendarCreator.py  SemesterDates.py  StudentCalendarCreator.py  StudentEventCreator.py
Domain/: Class.py  ClassProfessor.py  ClassType.py  Frequency.py  GroupClasses.py  Professor.py  ProfessorClass.py  ProfessorSchedule.py  Room.py  StudentClass.py  Subject.py  YearOfStudy.py
Parsers/: BaseWebsiteParser.py  CadreDidacticeParser.py  ProfessorPageParser.py  ProfessorScheduleParser.py  StudentYearPageParser.py  StudentYearScheduleParser.py  WebsiteParserInterface.py
ProfessorCalendars/: professors_dump.pickle
Repository/: PickleSerializer.py  ProfessorScheduleParserRepository.py  ProfessorSchedulePickleDumpRepository.py  Repository.py  StudentScheduleParserRepository.py  StudentSchedulePickleDumpRepository.py
Service/: CalendarService.py  ProfessorScheduleCalendarService.py  ProfessorScheduleService.py  Service.py  StudentScheduleCalendarService.py
